<resources>
    <string name="app_name">CareerPortfolio</string>
    <string name="discovering_your_portfolio">Discovering your Portfolio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_is_your_occupation">What is your occupation?</string>
    <string name="previous_occupation">If you are unemployed, please enter your previous occupation.</string>
    <string name="i_am_a">I am a</string>
    <string name="enter_your_occupation">Enter your occupation</string>
    <string name="search">Search</string>
    <string name="what_does_your_work_schedule_look_like">What does your work schedule look like?</string>
    <string name="work_schedule_subtitle">These are the tasks typically done by %1$s. Indicate if your task is a Core task, or not. Select and hold to delete tasks.</string>
    <string name="items_selected">%1$d items selected</string>
    <string name="your_tasks">Your tasks</string>
    <string name="core">Core</string>
    <string name="what_other_tasks_have_you_done_in_past_jobs_or_outside_work">What other tasks have you done in past jobs, or outside work?</string>
    <string name="a_task_is_made_up_of">A task is made up of an action, object, and purpose.<br>Example: Interview (action) people (object) to understand perspectives on current social trends (purpose).</br></string>
    <string name="add_tasks">Add Tasks</string>
    <string name="action">Action: </string>
    <string name="enter_an_object">Enter an object</string>
    <string name="object">Object:</string>
    <string name="purpose">Purpose:</string>
    <string name="enter_a_purpose">Enter a purpose</string>
</resources>