<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddTasksFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_other_tasks_have_you_done_in_past_jobs_or_outside_work"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/work_schedule_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_task_is_made_up_of"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_tasks"/>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/nextBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:src="@drawable/ic_arrow_forward_24px"
    app:tint="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>